--- a/platformio.ini
+++ b/platformio.ini
@@ -11,4 +11,8 @@
 [env:nanoatmega328new]
 platform = atmelavr
 board = nanoatmega328new
-framework = arduino
+
+
+;[env:nanoatmega168]
+;platform = atmelavr
+;board = nanoatmega168
